--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
 
         <!-- navbar -->
-        <nav class="navbar-fixed-top nav text-right">
+        <nav class="navbar-fixed-top nav text-right header-nav">
             <div class="container">
                <div id="links">
                    <a href="#">contact</a>
@@ -30,13 +30,33 @@
                 <div id="bio-text">
                     <h2 class="text-center" >Welcome to Isesa</h2>
                     <hr class="separator"/>
-                    <h5 class="animated-agenda text-center">
-                           To evolve continually as a centre of excellence in offering quality Information
-                            technology education
-                    </h5>
+                    <div class="content">
+                        <div class="content__container">
+                            <div class="content__container__list">
+                                <h5 class="content__container__list__item">ifdc nigger</h5>
+                                <h5 class="content__container__list__item">wubba lubba dub dub</h5>
+                                <h5 class="content__container__list__item">garage is his castle</h5>
+                                <h5 class="content__container__list__item">aveda kedavara</h5>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+
+        <!-- navbar -->
+        <nav class="navbar-fixed-bottom nav text-center">
+            <div class="container">
+                <div id="team-link">
+                    <a href="#">mystic</a>
+                    <a href="#">instinct</a>
+                    <a href="#">valor</a>
+                    <a href="#">operose</a>   
+                </div>
+            </div>
+        </nav>
+    
 
     </body>
     <link rel="stylesheet" href="css/style.css">
