--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <div id="overlay">
             <div id="slide1" class="main">
                 <div id="bio-text">
-                    <h2 class="text-center" >Welcome to Isesa</h2>
-                    <hr class="separator"/>
                     <div class="content">
+                        <h2 class="text-center" >Welcome to Isesa</h2>
+                        <hr class="separator"/>
                         <div class="content__container">
                             <div class="content__container__list">
-                                <h5 class="content__container__list__item">ifdc nigger</h5>
-                                <h5 class="content__container__list__item">wubba lubba dub dub</h5>
-                                <h5 class="content__container__list__item">garage is his castle</h5>
-                                <h5 class="content__container__list__item">aveda kedavara</h5>
+                                <h5 class="content__container__list__item">The Departmant of</h5>
+                                <h5 class="content__container__list__item">Information and Science</h5>
+                                <h5 class="content__container__list__item">and engineering presents</h5>
+                                <h5 class="content__container__list__item">the student council</h5>
                             </div>
                         </div>
                     </div>
@@ -44,19 +44,10 @@
             </div>
         </div>
 
+        <div>
+            
 
-        <!-- navbar -->
-        <nav class="navbar-fixed-bottom nav text-center">
-            <div class="container">
-                <div id="team-link">
-                    <a href="#">mystic</a>
-                    <a href="#">instinct</a>
-                    <a href="#">valor</a>
-                    <a href="#">operose</a>   
-                </div>
-            </div>
-        </nav>
-    
+        </div>
 
     </body>
     <link rel="stylesheet" href="css/style.css">
