--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <nav class="navbar-fixed-top nav text-right header-nav">
             <div class="container">
                <div id="links">
-                   <a href="#">contact</a>
-                   <a href="#">about </a>
+                   <a href="#contact">contact</a>
+                   <a href="#aboutise">about </a>
                    <a href="#">team </a>
-                   <a href="event.html">events </a>
+                   <a href="#events">events </a>
                 </div>
             </div>
         </nav>
@@ -33,10 +33,10 @@
                         <hr class="separator"/>
                         <div class="content__container">
                             <div class="content__container__list">
-                                <h5 class="content__container__list__item">The Departmant of</h5>
-                                <h5 class="content__container__list__item">Information and Science</h5>
-                                <h5 class="content__container__list__item">and engineering presents</h5>
-                                <h5 class="content__container__list__item">the student council</h5>
+                                <h5 class="content__container__list__item">◆&emsp;Technology&emsp;◆</h5>
+                                <h5 class="content__container__list__item">◆&emsp;Inspiration&emsp;◆</h5>
+                                <h5 class="content__container__list__item">◆&emsp;Research&emsp;◆</h5>
+                                <h5 class="content__container__list__item">◆&emsp;Learning&emsp;◆</h5>
                             </div>
                         </div>
                     </div>
@@ -44,9 +44,69 @@
             </div>
         </div>
 
-        <div>
-            
-
+        <!-- slide 2 -->
+        <div id="slide2">
+            <div id="events">
+                <span class="extra-height">&emsp;</span>
+                <div class="container">
+                   <h1 >events</h1>
+                   <br/>
+                   <h4>previous year</h4>
+                    <div class="row text-center">
+                        <img src="img/itquiz.png"/>
+                        <img src="img/decryption.png"/>
+                        <img src="img/mockint.png"/>
+                        <img src="img/gogetter.png"/>
+                        <img src="img/adzap.png"/>
+                    </div>
+                    <h4>upcomming</h4>
+                    <br/>
+                </div>
+            </div>
+            <div id="houses" class="inverse">
+                <div class="container">
+                    <h1>houses</h1>
+                </div>
+            </div>
+            <div class="container" id="aboutise">
+                <h1>about ISESA</h1>
+                <hr/>
+                <div>
+                    <h4>Vision</h4>
+                    <div class="text-center">
+                        <div class="text-left " id="vision-text">
+                            <p>
+                                Empower every student to be innovative,creative and productive
+                                in the field of Information Technology by<br/>
+                                imparting quality technical education, developing skills and inculcating 
+                                human values.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <hr/>
+                <div>
+                    <h4>Mission</h4>
+                    <div class="text-left">
+                        <ul>
+                            <li class="mission-item">To evolve continually as a centre of excellence in offering quality Information 
+                                    technology education</li>
+                            <li class="mission-item">To provide reliable, contemporary and integrated technology to support and facilitate 
+                                    teaching, learning, research and service</li>
+                            <li class="mission-item">To promote collaboration with industry and Institutes for constructive interaction for 
+                                    better integration of theory and application</li>
+                            <li class="mission-item">To nurture the students to meet the global competency in industry and academia</li>
+                            <li class="mission-item">To foster the personal growth and professional excellence of the staff</li>
+                        </ul>
+                    </div>
+                   
+                </div>
+            </div>
+            <div  id="contact" class="inverse">
+                <div class="container">
+                    <h1>contact</h1>
+                </div>
+            </div>   
         </div>
 
     </body>
