--- a/index.html
+++ b/index.html
@@ -60,16 +60,27 @@
                         <img src="img/adzap.png"/>
                     </div>
                     <h4>upcomming</h4>
+                    <div class="row text-center" id="upcomming">
+                        <div class="upcomming">De Script</div>
+                        <div class="upcomming">Hunger Games</div>
+                        <div class="upcomming">Mock Placements</div>
+                        <div class="upcomming">Paper Presentation</div>
+                        <div class="upcomming">Meme o Mania</div>
+                        <div class="upcomming">Degree for a Day</div>
+                        <div class="upcomming">TechQ</div>
+                    </div>
                     <br/>
                 </div>
             </div>
             <div id="houses" class="inverse">
+                <span class="extra-height">&emsp;</span>
                 <div class="container">
                     <h1>houses</h1>
                 </div>
             </div>
             <div class="container" id="aboutise">
-                <h1>about ISESA</h1>
+                <span class="extra-height">&emsp;</span>
+                <h1>about isesa</h1>
                 <hr/>
                 <div>
                     <h4>Vision</h4>
@@ -99,12 +110,17 @@
                             <li class="mission-item">To foster the personal growth and professional excellence of the staff</li>
                         </ul>
                     </div>
-                   
+                   <br/>
                 </div>
             </div>
             <div  id="contact" class="inverse">
                 <div class="container">
                     <h1>contact</h1>
+                    <br/>
+                    <div id="links" class="text-center" >
+                        <a href="https://github.com/isea-opensource">github</a>
+                        <a href="#">council.ise@gmail.com</a>
+                    </div>         
                 </div>
             </div>   
         </div>
