house logo added : change to better logos asap

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                <div id="links">
                    <a href="#contact">contact</a>
                    <a href="#aboutise">about </a>
-                   <a href="#">team </a>
+                   <a href="#houses">team </a>
                    <a href="#events">events </a>
                 </div>
             </div>
@@ -51,23 +51,15 @@
                 <div class="container">
                    <h1 >events</h1>
                    <br/>
-                   <h4>previous year</h4>
+                   <h4>previous </h4>
                     <div class="row text-center">
-                        <img src="img/itquiz.png"/>
-                        <img src="img/decryption.png"/>
-                        <img src="img/mockint.png"/>
-                        <img src="img/gogetter.png"/>
-                        <img src="img/adzap.png"/>
+                        <img src="img/descript.png"/>
+                        <img src="img/meme-O-mania.png"/>
                     </div>
                     <h4>upcomming</h4>
                     <div class="row text-center" id="upcomming">
-                        <div class="upcomming">De Script</div>
-                        <div class="upcomming">Hunger Games</div>
                         <div class="upcomming">Mock Placements</div>
                         <div class="upcomming">Paper Presentation</div>
-                        <div class="upcomming">Meme o Mania</div>
-                        <div class="upcomming">Degree for a Day</div>
-                        <div class="upcomming">TechQ</div>
                     </div>
                     <br/>
                 </div>
@@ -76,6 +68,12 @@
                 <span class="extra-height">&emsp;</span>
                 <div class="container">
                     <h1>houses</h1>
+                        <div class="row text-center" id="upcomming">
+                            <img class="house-logo" src='img/operose.png'>
+                            <img class="house-logo" src='img/mysitic.png'>
+                            <img class="house-logo" src='img/valour.png'>
+                            <img class="house-logo" src='img/instinct.png'>
+                        </div>
                 </div>
             </div>
             <div class="container" id="aboutise">
@@ -98,27 +96,34 @@
                 <hr/>
                 <div>
                     <h4>Mission</h4>
+                    <br/>
                     <div class="text-left">
                         <ul>
-                            <li class="mission-item">To evolve continually as a centre of excellence in offering quality Information 
+                            <li >To evolve continually as a centre of excellence in offering quality Information 
                                     technology education</li>
-                            <li class="mission-item">To provide reliable, contemporary and integrated technology to support and facilitate 
+                                <br/>
+                            <li >To provide reliable, contemporary and integrated technology to support and facilitate 
                                     teaching, learning, research and service</li>
-                            <li class="mission-item">To promote collaboration with industry and Institutes for constructive interaction for 
+                                <br/>
+                            <li >To promote collaboration with industry and Institutes for constructive interaction for 
                                     better integration of theory and application</li>
-                            <li class="mission-item">To nurture the students to meet the global competency in industry and academia</li>
-                            <li class="mission-item">To foster the personal growth and professional excellence of the staff</li>
+                                <br/>
+                            <li >To nurture the students to meet the global competency in industry and academia</li>
+                            <br/>
+                            <li >To foster the personal growth and professional excellence of the staff</li>
+                            <br/>
                         </ul>
                     </div>
                    <br/>
                 </div>
             </div>
-            <div  id="contact" class="inverse">
+            <div  id="contact" >
                 <div class="container">
                     <h1>contact</h1>
                     <br/>
-                    <div id="links" class="text-center" >
+                    <div class="text-left" >
                         <a href="https://github.com/isea-opensource">github</a>
+                        <span>&emsp;</span>
                         <a href="#">council.ise@gmail.com</a>
                     </div>         
                 </div>
@@ -126,8 +131,9 @@
         </div>
         
         
+        <!-- plugin for the jivosite chat support -->
         <!-- BEGIN JIVOSITE CODE {literal} -->
-<script type='text/javascript'>
+        <script type='text/javascript'>
 (function(){ var widget_id = '5ghSsLsLY4';var d=document;var w=window;function l(){
 var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
 <!-- {/literal} END JIVOSITE CODE -->
