--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                    <h4>previous </h4>
                     <div class="row text-center">
                         <img src="img/descript.png"/>
-                        <img src="img/meme-O-mania.png"/>
+                        <img src="img/meme-o-mania.png"/>
                     </div>
                     <h4>upcomming</h4>
                     <div class="row text-center" id="upcomming">
